[package]
name = "zk-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version="0.6", default-features=false}
dusk-plonk = "0.14.0"
dusk-jubjub = {version = "0.12", default-features = false}
